tests/out/error/struct/unexpected_global.in.bt
struct Bar {
	mut global e i32
}
