tests/out/error/struct/unexpected_global.out
tests/out/error/struct/unexpected_global.in.bt:2:6 error: unexpected `global`
